@@ -3,17 +3,17 @@ package com.aws.authportal.entity;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import org.w3c.dom.stylesheets.LinkStyle;
 
-import java.util.Collections;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 import static com.aws.authportal.entity.Permission.*;
 
 @RequiredArgsConstructor
 public enum Role {
-    USER(Collections.emptySet()),
+    USER(Set.of()),
     ADMIN(
             Set.of(
                 ADMIN_READ,ADMIN_UPDATE,ADMIN_CREATE,ADMIN_DELETE,
@@ -31,10 +31,12 @@ public enum Role {
     private final Set<Permission> permissions;
 
     public List<SimpleGrantedAuthority> getAuthorities(){
-        var authorities = getPermissions()
-                .stream()
-                .map(permission -> new SimpleGrantedAuthority(permission.name()))
-                .toList();
+        // collect permission strings (e.g. "admin:read") as authorities
+        List<SimpleGrantedAuthority> authorities = permissions.stream()
+                .map(p -> new SimpleGrantedAuthority(p.getPermission()))
+                .collect(Collectors.toCollection(ArrayList::new));
+
+        // add ROLE_XXX authority
         authorities.add(new SimpleGrantedAuthority("ROLE_" + this.name()));
         return authorities;
     }
